--- a/_Builds/Pew Pew_Data/boot.config
+++ b/_Builds/Pew Pew_Data/boot.config
@@ -1,9 +1,10 @@
 player-connection-mode=Listen
-player-connection-guid=3924775591
+player-connection-guid=2207248881
 player-connection-debug=0
 player-connection-project-name=Pew Pew
 player-connection-ip=192.168.1.18
 player-connection-ip=172.31.224.1
+player-connection-ip=172.18.32.1
 gfx-enable-gfx-jobs=1
 gfx-enable-native-gfx-jobs=1
 wait-for-native-debugger=0
